--- a/src/Biblioteca/TegBundle/Resources/views/documento/new.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/documento/new.html.twig
@@ -1,5 +1,12 @@
 {% extends '::base.html.twig' %}
 
+{% block stylesheets %}
+    {{ parent() }}
+    <link href="{{ asset('plugins/bootstrap-switch/bootstrap-switch.min.css') }}" type="text/css" rel="stylesheet" />
+    <link href="{{ asset('plugins/ngTagsInput/ng-tags-input.min.css') }}" type="text/css" rel="stylesheet" />
+    
+    <link href="{{ asset('css/fileinput.min.css') }}" media="all" rel="stylesheet" type="text/css" />
+{% endblock %} 
 {% block body -%}
     
     <h1>Upload File</h1>
@@ -18,4 +25,27 @@
         </a>
     </li>
 </ul>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+   
+    <script src="{{ asset('js/fileinput.js') }}" type="text/javascript"></script>
+    <script src="{{ asset('js/fileinput_locale_es.js') }}" type="text/javascript"></script>
+
+    
+    <script type="text/javascript">
+$('#biblioteca_tegbundle_documento_file').fileinput({
+    language: 'es',
+    uploadUrl: '#',
+    allowedFileExtensions : ['pdf'],
+    //maxFileSize: 10000,
+    showUpload: false/*,
+    initialPreview: [
+            '<img src="/biblioteca2/web/img/logo.jpg" class="file-preview-image" alt="The Moon" title="The Moon">'
+        ],*/
+
+});
+
+    </script>
+        
 {% endblock %}
