--- a/web/css/style.css
+++ b/web/css/style.css
@@ -135,3 +135,15 @@ tags-input[name="biblioteca_tegbundle_teg[keyWords]"] > div > div {
   border-radius: 4px;
   
 }
+.drop-box {
+    background: #F8F8F8;
+    border: 5px dashed #DDD;
+    width: 200px;
+    height: 65px;
+    text-align: center;
+    padding-top: 25px;
+    margin: 10px;
+}
+.dragover {
+    border: 5px dashed blue;
+}
